--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -2,13 +2,19 @@
 VARIABLES
 *********************/
 
-$red: #cc4e46;
-$pale: #ede6dc;
-$lightpale: #f2ece5;
-$paleborder: #eee7dd;
-$palefootertext: #d2d0c2;
-$modulebackground: #d0cdc4;
-$dark: #333;
+$green: #22D486;
+$green-hover: #20BD78;
+$white: #fff;
+$almostWhite: #F9F9FB;
+$darkTeal: #323c46;
+$black: #000;
+$grayMedium: #949ea8;
+$lightGray: #D9DCE1;
+$anotherGray: #A9AEB4;
+
+$primary-color: #C9CED3;
+$error-color: #FF558F;
+$animation-duration: 0.2s;
 
 
 /*********************
@@ -26,9 +32,9 @@ BREAKPOINTS
     @media (max-width: 960px) { @content ; }
   }
   @else if $point == 'SMALL' {
-    @media (min-width: 530px)  { @content ; }
+    @media (min-width: 425px)  { @content ; }
   }
   @else if $point == 'XSMALL' {
-    @media (max-width: 530px)  { @content ; }
+    @media (max-width: 425px)  { @content ; }
   }
 }
