--- a/src/components/Common/Logo/Logo.scss
+++ b/src/components/Common/Logo/Logo.scss
@@ -6,9 +6,13 @@
   left: 30px;
   font-size: 2.5rem;
   font-weight: 900;
-  color: #ffffff;
+  color: $white;
+
+  &.black {
+    color: $black;
+  }
 
   @include breakpoint('MEDIUM') {
-    color: #000;
+    color: $black;
   }
 }
