--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -3,15 +3,20 @@ VARIABLES
 *********************/
 
 $green: #22D486;
-$green-hover: #20BD78;
-$white: #fff;
+$greenHover: #20BD78;
+$white: #FFF;
 $almostWhite: #F9F9FB;
-$darkTeal: #323c46;
+$darkTeal: #323C46;
+$addButtonHover: #565D5A;
 $black: #000;
 $grayMedium: #949ea8;
 $lightGray: #D9DCE1;
+$grayButtonHover: #C4C9D1;
 $anotherGray: #A9AEB4;
-
+$dateGray: #CACDD0;
+$authorCement: #7D7878;
+$redButton: #FF4081;
+$redButtonHover: #E73370;
 $primary-color: #C9CED3;
 $error-color: #FF558F;
 $animation-duration: 0.2s;
