finished register and refactorizing login components

--- a/src/components/Common/FormContainer/FormContainer.scss
+++ b/src/components/Common/FormContainer/FormContainer.scss
@@ -1,6 +1,6 @@
 @import '@assets/styles/global.scss';
 
-.contentContainer {
+.FormContainer {
   display: flex;
   justify-content: center;
   flex-direction: column;
