--- a/src/components/EventList/EventList.scss
+++ b/src/components/EventList/EventList.scss
@@ -19,6 +19,10 @@
   margin-right: auto;
   margin-left: auto;
   margin-top: 70px;
+
+  /*@include breakpoint('SMALL') {
+    margin-top: 10px;
+  }*/
 }
 /*@media (min-width: 768px) {
   .eventsContainer {
@@ -39,7 +43,7 @@
 .cardsContainer {
   display: grid;
   grid-gap: 15px;
-  grid-template-rows: 1fr 1fr 1fr;
+  /*grid-template-rows: 1fr 1fr 1fr;*/
   &.gridStyle {
     grid-template-columns: 1fr 1fr 1fr;
 
