--- a/src/components/Common/SidePanel/SidePanel.scss
+++ b/src/components/Common/SidePanel/SidePanel.scss
@@ -6,10 +6,9 @@
   background-size: cover;
   width: 372px;
   height: 100vh;
-  position: absolute;
-  top: 0;
+  position: fixed;
   text-align: center;
-  z-index: -1;
+  z-index: 0;
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
