--- a/src/components/EventForm/EventForm.scss
+++ b/src/components/EventForm/EventForm.scss
@@ -3,7 +3,7 @@
 .EventForm {
   width: 450px;
 
-  @include breakpoint('MEDIUM') {
-    width: 250px;
+  @media (max-width: 756px) and (min-width: 425px) {
+    width: 350px;
   }
 }
