--- a/src/pages/Events/Events.scss
+++ b/src/pages/Events/Events.scss
@@ -19,16 +19,10 @@
   margin-right: auto;
   margin-left: auto;
   margin-top: 70px;
+  margin-bottom: 15px;
 
-  /*@include breakpoint('SMALL') {
-    margin-top: 10px;
-  }*/
 }
-/*@media (min-width: 768px) {
-  .eventsContainer {
-    width: 750px;
-  }
-}*/
+
 @media (min-width: 992px) {
   .eventsContainer {
     width: 992px;
@@ -50,12 +44,8 @@
     @media (max-width: 900px) {
       grid-template-columns: 1fr 1fr;
     }
-
     @media (max-width: 780px) {
       grid-template-columns: 1fr;
-    }
-    @include breakpoint('MEDIUM') {
-      grid-template-columns: 1fr !important;
     }
   }
 
